# rag-project

./: .env.example  .gitignore  README.md  pyproject.toml
data/: guia-onboarding.md  politica-ferias-beneficios.md  politica-trabalho-remoto.md
scripts/: ask.py  ingest.py
src/config/: settings.py
src/langchain_rag/: __init__.py  chain.py  embeddings.py  ingestion.py  llm.py  retrieval.py
src/mcp_server/: __init__.py  server.py
